style(tableAlignment): align items center
Align items center in mobile devices.

--- a/src/components/EmployeesTable.module.css
+++ b/src/components/EmployeesTable.module.css
@@ -51,10 +51,14 @@ th {
   th,
   td {
     padding: 8px;
+    text-align: center;
   }
 
   .fullName {
     flex-direction: column;
+    span {
+      padding-left: 0;
+    }
   }
 
   .pagination {
