--- a/src/components/SearchBar.module.css
+++ b/src/components/SearchBar.module.css
@@ -3,51 +3,45 @@
   display: flex;
   justify-content: flex-end;
 }
-.searchInput{
-    margin: 11px 0;
-    width: 20%;
-    font-size: 16px;
-
+.searchInput {
+  margin: 11px 0;
+  width: 20%;
+  font-size: 16px;
 }
 .searchButton {
   /* width: 40%; */
   align-self: center;
   margin-left: 20px;
   font-size: 16px;
-
 }
-
 
 /* Responsive design for mobile screens */
 @media screen and (max-width: 575px) {
-    .searchBar {
-        flex-direction: column;
-        justify-content: center;
-    }
-    .searchInput{
-        width: 80%;
-        align-self: center;
-        margin: 15px 0;
-    }
-
-    
+  .searchBar {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .searchInput {
+    width: 80%;
+    align-self: center;
+    margin: 15px 0;
+  }
 }
 
 /* Responsive design for tablet screens */
-@media screen and (min-width: 576px) and (max-width:1199px) {
-    .searchBar {
-        flex-direction: column;
-        justify-content: center;
-        margin-top: 10px;;
-    }
-    .searchInput{
-        margin: 10px 0;
-        width: 60%;
-        align-self: center;
-
-    }
-    .searchButton {
-        width: 20%;
-        align-self: center;
-      }
+@media screen and (min-width: 576px) and (max-width: 1199px) {
+  .searchBar {
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 10px;
+  }
+  .searchInput {
+    margin: 10px 0;
+    width: 60%;
+    align-self: center;
+  }
+  .searchButton {
+    width: 20%;
+    align-self: center;
+  }
 }
